--- a/Tarefa02-05/src/br/edu/ifro/MenuPrincipal.fxml
+++ b/Tarefa02-05/src/br/edu/ifro/MenuPrincipal.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="br.edu.ifro.MenuPrincipalController">
+<AnchorPane id="AnchorPane" prefHeight="338.0" prefWidth="407.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.MenuPrincipalController">
     <children>
-        <Button fx:id="button" layoutX="232.0" layoutY="163.0" onAction="#handleButtonAction" text="Clique aqui" />
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
+      <JFXTextField fx:id="txtNum1" layoutY="42.0" />
+      <JFXTextField fx:id="txtNum2" layoutY="115.0" />
+      <JFXTextField fx:id="txtResult" layoutY="184.0" />
+      <Label layoutX="14.0" layoutY="14.0" text="Numero 1" />
+      <Label layoutX="14.0" layoutY="79.0" text="Numero 2" />
+      <Label layoutX="14.0" layoutY="174.0" text="Resultado" />
+      <Button fx:id="btnSoma" layoutX="248.0" layoutY="42.0" mnemonicParsing="false" onAction="#Soma" text="Soma" />
     </children>
 </AnchorPane>
