--- a/Tarefa02-05/src/br/edu/ifro/MenuPrincipal.fxml
+++ b/Tarefa02-05/src/br/edu/ifro/MenuPrincipal.fxml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="338.0" prefWidth="407.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.MenuPrincipalController">
+<AnchorPane id="AnchorPane" prefHeight="414.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ifro.MenuPrincipalController">
     <children>
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <JFXTextField fx:id="txtNum1" layoutY="42.0" />
-      <JFXTextField fx:id="txtNum2" layoutY="115.0" />
-      <JFXTextField fx:id="txtResult" layoutY="184.0" />
-      <Label layoutX="14.0" layoutY="14.0" text="Numero 1" />
-      <Label layoutX="14.0" layoutY="79.0" text="Numero 2" />
-      <Label layoutX="14.0" layoutY="174.0" text="Resultado" />
-      <Button fx:id="btnSoma" layoutX="248.0" layoutY="42.0" mnemonicParsing="false" onAction="#Soma" text="Soma" />
+        <Label fx:id="label" layoutX="227.0" layoutY="229.0" minHeight="16" minWidth="69" />
+      <JFXTextField fx:id="txtNum1" layoutX="86.0" layoutY="135.0" />
+      <JFXTextField fx:id="txtNum2" layoutX="86.0" layoutY="208.0" />
+      <JFXTextField fx:id="txtResult" layoutX="86.0" layoutY="277.0" />
+      <Label layoutX="100.0" layoutY="107.0" text="Numero 1" />
+      <Label layoutX="100.0" layoutY="172.0" text="Numero 2" />
+      <Label layoutX="100.0" layoutY="267.0" text="Resultado" />
+      <Button fx:id="btnSoma" layoutX="334.0" layoutY="135.0" mnemonicParsing="false" onAction="#Soma" text="Soma" />
+      <MenuBar layoutY="-2.0" prefHeight="32.0" prefWidth="495.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#AbrirCadastroAluno" text="Alunos" />
+                  <MenuItem mnemonicParsing="false" onAction="#FecharProjeto" text="Fechar" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
     </children>
 </AnchorPane>
